fix ktlint with compose